English is difficult....

--- a/CombinedFixesTheme.theme.css
+++ b/CombinedFixesTheme.theme.css
@@ -1,9 +1,9 @@
 /**
  * @name Combined Fixes
- * @author ItzMarni, credits provided on the repo
+ * @author ItzMarni, credits for other people's work are in the repo/snippet files.
  * @description Multiple fixed for Discord's stupid bullshit
  * @source https://github.com/ItzMarni/css-snippets
- * @version 1.1.1
+ * @version 1.1.2
  */
 
 @import url(https://itzmarni.github.io/css-snippets/UserReimagined/import.css);
